Signed-off-by: 190159372@qq.com <190159372@qq.com>

--- a/index.html
+++ b/index.html
@@ -16,18 +16,24 @@
 	<body>
 		<div class="index">
 			<div id="event">
+				<!--主页最顶部的广告条-->
 				<div class="wrap">
 					<a href="https://www.jd.com/" target="_blank"></a>
 					<i id="event-close" class="iconfont"></i>
 				</div>
 			</div>
 			<div id="shortcut">
+				<!--主页顶部的一级导航-->
 				<div class="wrap clear">
-					<ul class="fl">
-						<li class="dropdown">
+					<ul class="fl dropparent">
+						<li class="dropdown clear">
 							<i class="iconfont"></i>
 							<span>北京</span>
 						</li>
+						<div class="subdrop">
+							<!--定位的二级菜单-->
+							<ol class="clear subdropol"></ol>
+						</div>
 					</ul>
 					<ul class="fr nav-li clear">
 						<li style="border-left: 0;">
@@ -43,21 +49,10 @@
 								<i class="iconfont"></i>
 							</div>
 							<div class="submyjd">
-								<ul class="list-top clear">
-									<li><a href="#"></a></li>
-									<li><a href="#"></a></li>
-									<li><a href="#"></a></li>
-									<li><a href="#"></a></li>
-									<li><a href="#"></a></li>
-									<li><a href="#"></a></li>
-								</ul>
-								<ul class="list-bottom clear">
-									<li><a href="#">我的京东</a></li>
-									<li><a href="#">我的优惠券</a></li>
-									<li><a href="#">我的白条</a></li>
-									<li><a href="#">我的理财</a></li>
-								</ul>
-						    </div>
+								<!--我的京东-二级导航菜单-->
+								<ul class="list-top clear"></ul>
+								<ul class="list-bottom clear"></ul>
+							</div>
 						</li>
 						<li>
 							<a target="_blank" href="//vip.jd.com/">京东会员</a>
@@ -71,23 +66,44 @@
 								<i class="iconfont"></i>
 							</div>
 							<div class="subservice">
+								<!--客户服务-二级导航菜单-->
 								<ul class="list-top clear">
 									<li class="spec">客户</li>
-									<li><a href="#">待处理订单</a></li>
-									<li><a href="#">消息</a></li>
-									<li><a href="#">返修退换货</a></li>
-									<li><a href="#">我的问答</a></li>
-									<li><a href="#">降价商品</a></li>
-									<li><a href="#">我的关注</a></li>
+									<li>
+										<a href="#">待处理订单</a>
+									</li>
+									<li>
+										<a href="#">消息</a>
+									</li>
+									<li>
+										<a href="#">返修退换货</a>
+									</li>
+									<li>
+										<a href="#">我的问答</a>
+									</li>
+									<li>
+										<a href="#">降价商品</a>
+									</li>
+									<li>
+										<a href="#">我的关注</a>
+									</li>
 								</ul>
 								<ul class="list-bottom clear">
 									<li class="spec">商户</li>
-									<li><a href="#">我的京东</a></li>
-									<li><a href="#">我的优惠券</a></li>
-									<li><a href="#">我的白条</a></li>
-									<li><a href="#">我的理财</a></li>
+									<li>
+										<a href="#">我的京东</a>
+									</li>
+									<li>
+										<a href="#">我的优惠券</a>
+									</li>
+									<li>
+										<a href="#">我的白条</a>
+									</li>
+									<li>
+										<a href="#">我的理财</a>
+									</li>
 								</ul>
-						    </div>
+							</div>
 						</li>
 						<li class="cw-icon webli">
 							<div>
@@ -95,57 +111,134 @@
 								<i class="iconfont"></i>
 							</div>
 							<div class="subweb spesubweb clear">
+								<!--网站导航-二级导航菜单-->
 								<ul class="clear">
 									<li class="spec">特色主题</li>
-									<li><a href="#">待处理订单</a></li>
-									<li><a href="#">消息</a></li>
-									<li><a href="#">返修退换货</a></li>
-									<li><a href="#">我的问答</a></li>
-									<li><a href="#">降价商品</a></li>
-									<li><a href="#">我的关注</a></li>
-									<li><a href="#">待处理订单</a></li>
-									<li><a href="#">消息</a></li>
-									<li><a href="#">返修退换货</a></li>
-									<li><a href="#">我的问答</a></li>
-									<li><a href="#">降价商品</a></li>
-									<li><a href="#">我的关注</a></li>
+									<li>
+										<a href="#">待处理订单</a>
+									</li>
+									<li>
+										<a href="#">消息</a>
+									</li>
+									<li>
+										<a href="#">返修退换货</a>
+									</li>
+									<li>
+										<a href="#">我的问答</a>
+									</li>
+									<li>
+										<a href="#">降价商品</a>
+									</li>
+									<li>
+										<a href="#">我的关注</a>
+									</li>
+									<li>
+										<a href="#">待处理订单</a>
+									</li>
+									<li>
+										<a href="#">消息</a>
+									</li>
+									<li>
+										<a href="#">返修退换货</a>
+									</li>
+									<li>
+										<a href="#">我的问答</a>
+									</li>
+									<li>
+										<a href="#">降价商品</a>
+									</li>
+									<li>
+										<a href="#">我的关注</a>
+									</li>
 								</ul>
 								<ul class="clear">
 									<li class="spec">行业频道</li>
-									<li><a href="#">我的京东</a></li>
-									<li><a href="#">我的优惠券</a></li>
-									<li><a href="#">我的白条</a></li>
-									<li><a href="#">我的理财</a></li>
-									<li><a href="#">我的京东</a></li>
-									<li><a href="#">我的优惠券</a></li>
-									<li><a href="#">我的白条</a></li>
-									<li><a href="#">我的理财</a></li>
+									<li>
+										<a href="#">我的京东</a>
+									</li>
+									<li>
+										<a href="#">我的优惠券</a>
+									</li>
+									<li>
+										<a href="#">我的白条</a>
+									</li>
+									<li>
+										<a href="#">我的理财</a>
+									</li>
+									<li>
+										<a href="#">我的京东</a>
+									</li>
+									<li>
+										<a href="#">我的优惠券</a>
+									</li>
+									<li>
+										<a href="#">我的白条</a>
+									</li>
+									<li>
+										<a href="#">我的理财</a>
+									</li>
 								</ul>
 								<ul class="clear">
 									<li class="spec">生活服务</li>
-									<li><a href="#">我的京东</a></li>
-									<li><a href="#">我的优惠券</a></li>
-									<li><a href="#">我的白条</a></li>
-									<li><a href="#">我的理财</a></li>
-									<li><a href="#">待处理订单</a></li>
-									<li><a href="#">消息</a></li>
-									<li><a href="#">返修退换货</a></li>
-									<li><a href="#">我的问答</a></li>
-									<li><a href="#">降价商品</a></li>
-									<li><a href="#">我的关注</a></li>
+									<li>
+										<a href="#">我的京东</a>
+									</li>
+									<li>
+										<a href="#">我的优惠券</a>
+									</li>
+									<li>
+										<a href="#">我的白条</a>
+									</li>
+									<li>
+										<a href="#">我的理财</a>
+									</li>
+									<li>
+										<a href="#">待处理订单</a>
+									</li>
+									<li>
+										<a href="#">消息</a>
+									</li>
+									<li>
+										<a href="#">返修退换货</a>
+									</li>
+									<li>
+										<a href="#">我的问答</a>
+									</li>
+									<li>
+										<a href="#">降价商品</a>
+									</li>
+									<li>
+										<a href="#">我的关注</a>
+									</li>
 								</ul>
 								<ul class="clear" style="border-right: 0;">
 									<li class="spec">更多精选</li>
-									<li><a href="#">我的京东</a></li>
-									<li><a href="#">我的优惠券</a></li>
-									<li><a href="#">我的白条</a></li>
-									<li><a href="#">我的理财</a></li>
-									<li><a href="#">我的京东</a></li>
-									<li><a href="#">我的优惠券</a></li>
-									<li><a href="#">我的白条</a></li>
-									<li><a href="#">我的理财</a></li>
+									<li>
+										<a href="#">我的京东</a>
+									</li>
+									<li>
+										<a href="#">我的优惠券</a>
+									</li>
+									<li>
+										<a href="#">我的白条</a>
+									</li>
+									<li>
+										<a href="#">我的理财</a>
+									</li>
+									<li>
+										<a href="#">我的京东</a>
+									</li>
+									<li>
+										<a href="#">我的优惠券</a>
+									</li>
+									<li>
+										<a href="#">我的白条</a>
+									</li>
+									<li>
+										<a href="#">我的理财</a>
+									</li>
 								</ul>
-						    </div>
+							</div>
 						</li>
 						<li>
 							<div>手机京东</div>
@@ -154,19 +247,44 @@
 				</div>
 			</div>
 			<div id="header">
+				<!--主页内容的头部，主要包含logo、搜索、一级导航等-->
+				<div id="fixhead">
+					<!--顶部固定悬浮导航模块-->
+					<div class="wrap">
+						<div class="fix-logo">
+							<a href="//www.jd.com" class="search_logo_lk">京东，多快好省</a>
+						</div>
+						<div class="fix-search form">
+							<form>
+								<input type="text" class="text">
+								<span class="upload-bg photo"></span>
+								<button class="button"><i class="iconfont"></i></button>
+							</form>
+							<div>
+								<ul class="text-ul"></ul>
+							</div>
+						</div>
+					</div>
+				</div>
 				<div class="wrap">
 					<div class="logo">
+						<!--logo-->
 						<h1 class="logo_tit"><a href="//www.jd.com" class="logo_tit_lk">京东</a></h1>
 					</div>
 					<div class="search">
 						<div class="form">
+							<!--搜索框-->
 							<form>
 								<input type="text" class="text" />
 								<span class="photo"></span>
 								<button class="button"><i class="iconfont"></i></button>
 							</form>
+							<div>
+								<ul class="text-ul"></ul>
+							</div>
 						</div>
 						<div id="settleup">
+							<!--购物车状态-->
 							<div class="cw-icon">
 								<i class="iconfont"></i>
 								<i class="ci-count" id="shopping-amount">0</i>
@@ -174,6 +292,7 @@
 							</div>
 						</div>
 						<div id="hotwords" class="clear">
+							<!--搜索框下面的提示——热词模块-->
 							<a href="https://sale.jd.com/act/Qba4mC7vXLPO8uJ.html?spm=1.1.0" target="_blank" class="style-red">1088礼包</a>
 							<a href="https://sale.jd.com/act/fCpjlzMUSDrxgqP.html?spm=1.1.1" target="_blank">1212神券</a>
 							<a href="https://sale.jd.com/act/zor3tQdiT2exC4.html?spm=1.1.2" target="_blank">农资爆品</a>
@@ -185,7 +304,9 @@
 							<a href="//search.jd.com/Search?keyword=%E6%99%BA%E8%83%BD%E6%89%8B%E8%A1%A8&amp;enc=utf-8&amp;spm=1.1.8" target="_blank">智能手表</a>
 						</div>
 						<div id="navitems" class="clear">
+							<!--主页的内容导航，分三大块-->
 							<ul id="navitems-group1" class="clear">
+								<!--块一-->
 								<li class="fore1">
 									<a target="_blank" href="//miaosha.jd.com/">秒杀</a>
 								</li>
@@ -201,6 +322,7 @@
 							</ul>
 							<div class="spacer"></div>
 							<ul id="navitems-group2" class="clear">
+								<!--块二-->
 								<li class="fore1">
 									<a target="_blank" href="//channel.jd.com/fashion.html">京东服饰</a>
 								</li>
@@ -216,6 +338,7 @@
 							</ul>
 							<div class="spacer"></div>
 							<ul id="navitems-group3" class="clear">
+								<!--块三-->
 								<li class="fore1">
 									<a target="_blank" href="//jr.jd.com/">京东金融<img style="position: absolute; top: 0; margin-left: 0px; width: 30px; height: 18px;" src="//m.360buyimg.com/babel/jfs/t15175/197/195326658/2310/12023499/5a260ce3Na205b772.png"></a>
 								</li>
@@ -226,7 +349,8 @@
 						</div>
 					</div>
 				</div>
-				<div id="fixhead">
+				<!--<div id="fixhead">
+					<!--顶部固定悬浮导航模块-->
 					<div class="wrap">
 						<div class="fix-logo">
 							<a href="//www.jd.com" class="search_logo_lk">京东，多快好省</a>
@@ -237,13 +361,18 @@
 								<span class="upload-bg"></span>
 								<button><i class="iconfont"></i></button>
 							</form>
+							<div>
+								<ul class="text-ul"></ul>
+							</div>
 						</div>
 					</div>
-				</div>
+				</div>-->
 			</div>
 			<div id="fs">
+				<!--包含较明细的导航、轮播图等的模块，分三块（列）布局-->
 				<div class="wrap fs-inner clear">
 					<div class="fs-col1 fl">
+						<!--块一，商品大分类的明细导航-->
 						<ul class="cate_menu">
 							<li class="cate_menu_item">
 								<a target="_blank" class="cate_menu_lk" href="//jiadian.jd.com">家用电器</a>
@@ -356,7 +485,33 @@
 						</ul>
 					</div>
 					<div class="fs-col2 fl">
-						<div class="slider"></div>
+						<!--块二，中间的轮播图-->
+						<div class="slider">
+							<ul class="clear">
+								<li style="z-index: 2"><img src="img/1.jpg"></li>
+								<li><img src="img/2.jpg"></li>
+								<li><img src="img/3.jpg"></li>
+								<li><img src="img/4.jpg"></li>
+								<li><img src="img/5.jpg"></li>
+								<li><img src="img/6.jpg"></li>
+								<li><img src="img/7.jpg"></li>
+								<li><img src="img/8.jpg"></li>
+							</ul>
+							<div>
+								<ol class="clear">
+									<li class="active">1</li>
+									<li>2</li>
+									<li>3</li>
+									<li>4</li>
+									<li>5</li>
+									<li>6</li>
+									<li>7</li>
+									<li>8</li>
+								</ol>
+							</div>
+							<a href="javascript:;" class="left">＜</a>
+							<a href="javascript:;" class="right">＞</a>
+						</div>
 						<div class="slider-extend clear">
 							<div class="slider_bi">
 								<a href="//global.jd.com" class="slider_bi_lk" target="_blank"> <img class="slider_bi_img" title="" alt="" src="//img10.360buyimg.com/babel/s390x130_jfs/t14122/158/1740877704/20610/2cc0df34/5a27534aN7774cb89.jpg!q90"></a>
@@ -367,6 +522,7 @@
 						</div>
 					</div>
 					<div class="fs-col3 fr">
+						<!--块三，右边的公告、导航等-->
 						<div class="user">
 							<div class="user-info">
 								<div class="user-info-img"><img src="//misc.360buyimg.com/mtd/pc/common/img/no_login.jpg">
@@ -386,19 +542,21 @@
 							</div>
 						</div>
 						<div class="news">
+							<!--促销和公告模块，要实现tab切换-->
 							<div class="news-head">
-								<a href="javascript:;" class="news-first">促销</a>
-								<a href="javascript:;" class="news-last">公告</a>
+								<a href="javascript:;" class="news-first newsli">促销</a>
+								<a href="javascript:;" class="news-last newsli">公告</a>
 								<div class="line"></div>
 								<a href="//www.jd.com/moreSubject.aspx" target="_blank" class="news-more">更多</a>
 							</div>
-							<div class="news-content">
+							<div class="news-content newstab">
+								<!--促销模块-->
 								<ul class="news_list">
 									<li class="news_item">
 										<a href="//www.jd.com/news.aspx?id=36172" target="_blank" class="news-link">111111111111111111111111广州部分地区受道路限行、交通管制影响配送延迟公告</a>
 									</li>
 									<li class="news_item">
-										<a href="//www.jd.com/news.aspx?id=36083" target="_blank" class="news-link">111111111111111111111111关于召回普利司通（天津）轮胎有限公司2个规格乘用车轮胎的公告</a>
+										<a href="//www.jd.com/news.aspx?id=36083" target="_blank" class="news-link">111111111111111111111111天府大件运营中心开仓公告</a>
 									</li>
 									<li class="news_item">
 										<a href="//www.jd.com/news.aspx?id=35887" target="_blank" class="news-link">111111111111111111111111京东物流推出配送员统一外呼电话"95056”</a>
@@ -408,8 +566,26 @@
 									</li>
 								</ul>
 							</div>
+							<div class="broadcast-content newstab">
+								<!--公告模块-->
+								<ul class="news_list">
+									<li class="news_item">
+										<a href="//www.jd.com/news.aspx?id=36172" target="_blank" class="news-link">22222222222222222222222222关于召回普利司通（天津）轮胎有限公司2个规格乘用车轮胎的公告</a>
+									</li>
+									<li class="news_item">
+										<a href="//www.jd.com/news.aspx?id=36083" target="_blank" class="news-link">22222222222222222222222222关京东物流推出配送员统一外呼电话"95056”</a>
+									</li>
+									<li class="news_item">
+										<a href="//www.jd.com/news.aspx?id=35887" target="_blank" class="news-link">22222222222222222222222222京东物流推出配送员统一外呼电话"95056”</a>
+									</li>
+									<li class="news_item">
+										<a href="//www.jd.com/news.aspx?id=35772" target="_blank" class="news-link">22222222222222222222222222天府大件运营中心开仓公告</a>
+									</li>
+								</ul>
+							</div>
 						</div>
 						<div class="service">
+							<!--常用功能的导航模块-->
 							<div class="service-entry">
 								<ul class="service-list">
 									<li class="service_item">
@@ -493,13 +669,16 @@
 				</div>
 			</div>
 			<div id="seckill">
+				<!--秒杀模块-->
 				<div class="wrap">
 					<div class="box_hd clear">
+						<!--秒杀的logo、title等-->
 						<div class="box_hd_col1 fl"><i class="box_hd_dec"></i><i class="box_hd_icon"></i>
 							<h3 class="box_tit">京东秒杀</h3>
 							<a href="//miaosha.jd.com" target="_blank" class="box_subtit">总有你想不到的低价<i class="box_subtit_arrow"></i></a>
 						</div>
 						<div class="box_hd_col2 fr clear">
+							<!--秒杀倒计时模块-->
 							<div class="sk_cd fl clear">
 								<div class="sk_cd_tip fl">当前场次</div>
 								<div class="sk_cd_main">
@@ -516,7 +695,9 @@
 						</div>
 					</div>
 					<div class="box_bd clear">
+						<!--秒杀模块的内容，分两块布局——数据列表和轮播图广告-->
 						<div class="sk-list fl">
+							<!--秒杀模块的数据列表-->
 							<ul>
 								<li class="sk-item">
 									<div>
@@ -530,6 +711,7 @@
 							</ul>
 						</div>
 						<div class="sk-special fr">
+							<!--秒杀模块的轮播图广告-->
 							<ul class="special-list">
 								<li style="z-index: 2;">
 									<a href="//miaosha.jd.com/pinpailist.html" target="_blank" class="sk_special_lk"><img src="//img13.360buyimg.com/mobilecms/s180x225_jfs/t13867/286/1667680132/35959/82f1fea5/5a269c26Nbe146099.jpg" data-lazy-src="//img13.360buyimg.com/mobilecms/s180x225_jfs/t13867/286/1667680132/35959/82f1fea5/5a269c26Nbe146099.jpg" alt="" title="" class="sk_special_pic"></a>
@@ -552,5 +734,6 @@
 	</body>
 	<script src="js/jquery-1.11.3.js" type="text/javascript"></script>
 	<script src="js/index.js" type="text/javascript"></script>
+	<script src="js/index-search.js" type="text/javascript"></script>
 
 </html>
