--- a/test.html
+++ b/test.html
@@ -4,44 +4,126 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-		<script src="js/jquery-1.11.3.js"></script>
 		<style>
-			a {
+			* {
+				margin: 0;
+				padding: 0;
+				font-size: 20px;
+			}
+			
+			.form {
+				position: relative;
+				width: 630px;
+				left: 20%;
+				top: 10%;
+			}
+			
+			button {
+				width: 80px;
+				height: 40px;
+				border: none;
+				background-color: #FF4200;
+				margin-left: 130px;
+			}
+			
+			input {
+				height: 40px;
+				width: 420px;
 				display: block;
-				width: 100px;
-				height: 100px;
+				outline: none;
+				text-indent: 5px;
+				border: none;
+				border: 2px solid #FF4200;
+				margin: 50px auto;
+			}
+			
+			ul {
+				width: 632px;
+				border: 1px solid #CCCCCC;
+				position: absolute;
+				left: 0;
+				top: 42px;
+				background-color: white;
+				/*display: none;*/
+			}
+			
+			li {
+				font-size: 14px;
+				list-style: none;
+				/*cursor: pointer;*/
 			}
 		</style>
+		
+		<script src="js/jquery-1.11.3.js"></script>
 	</head>
 
 	<body>
-		<div>
-			<a class="1" href="" title="">111<img src="" alt=""></a>
-			<a class="2" href="" title="">222<img src="" alt=""></a>
-			<a class="3" href="" title="">333<img src="" alt=""></a>
+		<div class="form">
+			<!--搜索框-->
+			<form>
+				<input type="text" class="text" />
+			</form>
+			<div>
+				<ul class="text-ul"></ul>
+			</div>
 		</div>
-		<!--<script>
-			$.when(
-				$.ajax("php/index.php")).done(function(data) {
-				var arr = JSON.parse(data);
-				var $a = $('a');
-				for(var i = 0; i < $a.length; i++) {
-					for(var j in arr[i]) {
-						console.log(arr[i][j]);
-						$a.attr('href', arr[i]['href'])
-					}
-				}
-			});
-		</script>-->
 		<script>
-			$.when(
-				$.ajax('php/test.php')).done(function(data) {
-				var arr = JSON.parse(data);
-				console.log(arr);
+			var $oInput = $('.text');
+			var $oUl = $('.text-ul');
+			var $temp = '';
+
+			function taobao(data) {
+				var arr = data.result;
+				var html = '';
+				if($oInput.val() != '') {
+					if(arr.length < 4) {
+						for(var i = 0; i < arr.length; i++) {
+							html += '<li>' + arr[i] + '</li>';
+						}
+					} else {
+						for(var i = 0; i < 4; i++) {
+							html += '<li>' + arr[i] + '</li>';
+						}
+					}
+					$oUl.html(html);
+				} else {
+					$oUl.html('');
+				}
+				var $aLi = $('li');
+				$aLi.on('click', function() {
+					$oInput.val($(this).html());
+					$oUl.css('display', 'none');
+				})
+				$aLi.hover(function() {
+					$temp = $(this).html();
+				}, function() {
+					$temp = '';
+				})
+			}
+			$oInput.on('input', function() {
+				if($oInput.val() == '') {
+					$oUl.css('display', 'none');
+				} else {
+					$oUl.css('display', 'block');
+				}
+				var $script = $("<script src='https://suggest.taobao.com/sug?code=utf-8&q=" + $oInput.val() + "&_ksTS=1511263761406_471&callback=taobao&k=1&area=c2c&bucketid=10'><\/script>")
+				$('body').append($script);
+			})
+			$oInput.on('blur', function() {
+				if($temp != '') {
+					$oInput.val($temp);
+				}
+				$oUl.css('display', 'none');
+			})
+			$oInput.on('focus', function() {
+				if($oInput.val() == '') {
+					$oUl.css('display', 'none');
+				} else {
+					$oUl.css('display', 'block');
+				}
 			});
 		</script>
 
 	</body>
-	<script src="js/jquery-1.11.3.js" type="text/javascript"></script>
 
 </html>
