--- a/test.html
+++ b/test.html
@@ -5,123 +5,304 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<style>
-			* {
-				margin: 0;
-				padding: 0;
-				font-size: 20px;
-			}
-			
-			.form {
+			.wwrap {
 				position: relative;
-				width: 630px;
-				left: 20%;
-				top: 10%;
+				width: 1000px;
+				height: 470px;
+			}
+			.spic-n1 {
+				width: 350px;
+				height: 350px;
+				margin: 14px 0 14px 14px;
+				position: relative;
+				float: left;
 			}
 			
-			button {
-				width: 80px;
-				height: 40px;
-				border: none;
-				background-color: #FF4200;
-				margin-left: 130px;
+			.spic-n1 img {
+				width: 350px;
+				height: 350px;
 			}
-			
-			input {
-				height: 40px;
-				width: 420px;
-				display: block;
-				outline: none;
-				text-indent: 5px;
-				border: none;
-				border: 2px solid #FF4200;
-				margin: 50px auto;
-			}
-			
-			ul {
-				width: 632px;
-				border: 1px solid #CCCCCC;
+			#sf {
+				width: 50px;
+				height: 50px;
+				background: orange;
+				opacity: 0.3;
 				position: absolute;
-				left: 0;
-				top: 42px;
-				background-color: white;
-				/*display: none;*/
+				left: 0px;
+				top: 0px;
 			}
 			
-			li {
-				font-size: 14px;
-				list-style: none;
-				/*cursor: pointer;*/
+			.wwrap #bf {
+				width: 500px;
+				height: 400px;
+				border: 1px solid #000;
+				float: left;
+				overflow: hidden;
+				position: relative;
+				left: 10px;
+			}
+			
+			.wwrap #bf img {
+				position: absolute;
+				left: 0px;
+				top: 0px;
+			}
+			
+			img {
+				border: 0;
+				vertical-align: middle;
+			}
+			
+			
+			
+			
+			
+			.spec-list {
+				position: absolute;
+				top: 390px;
+				width: 310px;
+				height: 54px;
+				overflow: hidden;
+				padding: 0 20px 0 34px;
+			}
+			
+			.spec-list .spec-control {
+				display: block;
+				position: absolute;
+				top: 0;
+				width: 14px;
+				height: 54px;
+				background: url("img/newicon20140910.png") no-repeat 0 0;
+			}
+			
+			.spec-list .spec-items {
+				position: absolute;
+				width: 310px;
+				height: 54px;
+				overflow: hidden;
+				top: 0;
+				left: 36px;
+			}
+			
+			.spec-list ul {
+				position: absolute;
+				width: 372px;
+				height: 54px;
+				top: 0px;
+				left: 0px;
+			}
+			
+			.spec-list li {
+				width: 62px;
+				text-align: center;
+				font-size: 0;
+				position: relative;
+				float: left;
+			}
+			
+			.spec-list li img {
+				width: 50px;
+				height: 50px;
+				padding: 2px;
+				display: block;
+			}
+			
+			.spec-list #left {
+				left: 14px;
+				background-position: -56px -346px;
+			}
+			
+			.spec-list #right {
+				right: 0;
+				background-position: -14px -346px;
+			}
+			
+			.report-btn {
+				font-size: 12px;
+			}
+			
+			.short-share {
+				padding: 0 40px 0 34px;
+			}
+			
+			.short-share em {
+				font-size: 12px;
+			}
+			
+			.short-share b {
+				position: absolute;
+				display: inline-block;
+				background: url(//static.360buyimg.com/item/main/1.0.38/css/i/newicon20140910.png) no-repeat 0 0;
+			}
+			
+			.share-list {
+				padding: 0 10px 0 17px;
+				position: relative;
+				display: block;
+			}
+			
+			.share-list b {
+				top: 2px;
+				left: 0;
+				height: 12px;
+				overflow: hidden;
+				width: 12px;
+				background-position: -162px -296px;
+			}
+			
+			.choose-btn-coll {
+				padding-left: 18px;
+				position: relative;
+				display: block;
+			}
+			
+			.choose-btn-coll b {
+				background-position: -177px -296px;
+				width: 14px;
+				height: 14px;
+				top: 3px;
+				margin-left: -15px;
+			}
+			
+			.item-inner {
+				padding-right: 244px;
+				width: 588px;
+			}
+			
+			.item-ext {
+				width: 244px;
+				float: left;
+				margin-left: -244px;
+				overflow: hidden;
+				background: #fff;
 			}
 		</style>
-		
+
 		<script src="js/jquery-1.11.3.js"></script>
 	</head>
 
 	<body>
-		<div class="form">
-			<!--搜索框-->
-			<form>
-				<input type="text" class="text" />
-			</form>
-			<div>
-				<ul class="text-ul"></ul>
+		<div class="fl preview">
+			<div class="wwrap">
+				<div id="spic" class="spic-n1">
+					<img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt=" ">
+					<div id="sf"></div>
+				</div>
+				<div id="bf">
+					<img src="//img10.360buyimg.com/n0/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg" alt=" " id="bpic">
+				</div>
+				<div class="spec-list" id="ulist">
+					<a href="javascript:;" id="left" class="spec-control"></a>
+					<a href="javascript:;" id="right" class="spec-control"></a>
+					<div class="spec-items" id="list">
+						<ul class="clear">
+							<li><img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
+							<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
+							<li><img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
+							<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
+							<li><img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
+							<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
 		<script>
-			var $oInput = $('.text');
-			var $oUl = $('.text-ul');
-			var $temp = '';
-
-			function taobao(data) {
-				var arr = data.result;
-				var html = '';
-				if($oInput.val() != '') {
-					if(arr.length < 4) {
-						for(var i = 0; i < arr.length; i++) {
-							html += '<li>' + arr[i] + '</li>';
+			function magnifier() {
+				var $spic = $('#spic');
+				var $sf = $('#sf');
+				var $bf = $('#bf');
+				var $bpic = $('#bpic');
+				var $left = $('#left');
+				var $right = $('#right');
+				var $num = 6;
+				var $list = $('#list li');
+				var $ul = $('#list ul');
+				$spic.hover(function(ev) {
+					$sf.show();
+					$bf.show();
+					$bpic.show();
+					$sf.width($bf.width() * $spic.width() / $bpic.width());
+					console.log($bf.width());//500
+					console.log($bpic.width());//350
+					console.log($spic.width());//350
+					
+					console.log($sf.width());//500
+					$sf.height($bf.height() * $spic.height() / $bpic.height());
+					$(document).on('mousemove', function(ev) {
+						var $l = ev.clientX - $spic.offset().left - ($sf.width() / 2);
+						var $t = ev.clientY - $spic.offset().top - ($sf.height() / 2);
+						var $scale = $bpic.width() / $spic.width();
+						if($l <= 0) {
+							$l = 0;
 						}
-					} else {
-						for(var i = 0; i < 4; i++) {
-							html += '<li>' + arr[i] + '</li>';
+						if($l >= $spic.width() - $sf.width()) {
+							$l = $spic.width() - $sf.width();
 						}
-					}
-					$oUl.html(html);
-				} else {
-					$oUl.html('');
-				}
-				var $aLi = $('li');
-				$aLi.on('click', function() {
-					$oInput.val($(this).html());
-					$oUl.css('display', 'none');
-				})
-				$aLi.hover(function() {
-					$temp = $(this).html();
+						if($t <= 0) {
+							$t = 0;
+						}
+						if($t >= $spic.height() - $sf.height()) {
+							$t = $spic.height() - $sf.height();
+						}
+						$sf.css({
+							left: $l,
+							top: $t
+						});
+						$bpic.css({
+							left: -$scale * $l,
+							top: -$scale * $t
+						})
+					});
 				}, function() {
-					$temp = '';
-				})
+					$sf.hide();
+					$bf.hide();
+					$bpic.hide();
+				});
+				if($num >= $list.length) {
+					$right.css({
+						color: '#fff'
+					})
+				}
+				$right.on('click', function() {
+					if($num < $list.length) {
+						$num++;
+						if($num == $list.length) {
+							$right.css({
+								color: '#fff'
+							});
+						}
+						$left.css({
+							color: '#333'
+						})
+					}
+					$ul.animate({
+						left: -$list.innerWidth() * ($num - 6)
+					}, 100);
+				});
+				$left.on('click', function() {
+					if($num > 6) {
+						$num--;
+						if($num == 6) {
+							$left.css({
+								color: '#fff'
+							});
+						}
+						$right.css({
+							color: '#333'
+						});
+					}
+					$ul.animate({
+						left: -$list.innerWidth() * ($num - 6)
+					}, 100)
+				});
+				$list.on('click', function() {
+					var $src = $(this).children('img').attr('src');
+					$('#spic img').attr('src', $src);
+					$('#bpic').attr('src', $src);
+				});
 			}
-			$oInput.on('input', function() {
-				if($oInput.val() == '') {
-					$oUl.css('display', 'none');
-				} else {
-					$oUl.css('display', 'block');
-				}
-				var $script = $("<script src='https://suggest.taobao.com/sug?code=utf-8&q=" + $oInput.val() + "&_ksTS=1511263761406_471&callback=taobao&k=1&area=c2c&bucketid=10'><\/script>")
-				$('body').append($script);
-			})
-			$oInput.on('blur', function() {
-				if($temp != '') {
-					$oInput.val($temp);
-				}
-				$oUl.css('display', 'none');
-			})
-			$oInput.on('focus', function() {
-				if($oInput.val() == '') {
-					$oUl.css('display', 'none');
-				} else {
-					$oUl.css('display', 'block');
-				}
-			});
+			magnifier();
 		</script>
 
 	</body>
