Signed-off-by: xuxu713 <190159372@qq.com>

--- a/login.html
+++ b/login.html
@@ -51,10 +51,18 @@
 									<a href="javascript:;" class="namelogin">账户登录</a>
 								</div>
 							</div>
-							<div class="qrcode-login"><!--扫码登录的主内容盒子-->
-								<div class="qrcode">
-									<img src="https://qr.m.jd.com/show?appid=133&size=147&t=1512664884061">
-									<a href="javascript:;">刷新</a>
+							<div class="qrcode-login">
+								<!--扫码登录的主内容盒子-->
+								<div class="qrcode1">
+									<div class="qrcode-text">
+										<!--二维码-->
+										<img src="https://qr.m.jd.com/show?appid=133&size=147&t=1512664884061">
+										<a href="javascript:;">刷新</a>
+									</div>
+								</div>
+								<div class="zhezhao"></div>
+								<!--扫码的帮助图片-->
+								<div class="qrcode-help">
 								</div>
 								<div class="qrcode-panel">
 									<span>打开</span>
@@ -69,7 +77,8 @@
 									</ul>
 								</div>
 							</div>
-							<div class="username-login"><!--账户登录的主内容盒子-->
+							<div class="username-login">
+								<!--账户登录的主内容盒子-->
 								<form>
 									<div class="item item-fore1">
 										<label for="loginname"></label>
