--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<body>
 		<div id="largestbox">
-			<!--楼梯1开始-->
+			<!--楼梯导航-->
 			<div id="loutinav">
 				<ul>
 					<li class="active"><span>享品质</span> </li>
@@ -30,9 +30,8 @@
 					<li class="last">顶部</li>
 				</ul>
 			</div>
-			<!--楼梯1结束-->
+			<!--楼层顶部-->
 			<div id="headerlt">
-				<!--楼梯2开始-->
 				<div class="index">
 					<!--主页最顶部的广告条-->
 					<div id="event">
@@ -57,7 +56,7 @@
 							<ul class="fr nav-li clear">
 								<li style="border-left: 0;">
 									<a href="#">你好，请登录</a>
-									<a href="#" class="freereg">免费注册</a>
+									<a href="#" class="freereg style-red">免费注册</a>
 								</li>
 								<li>
 									<a target="_blank" href="//order.jd.com/center/list.action">我的订单</a>
@@ -702,11 +701,60 @@
 						<div class="box_bd clear">
 							<!--秒杀模块的数据列表-->
 							<div class="sk-list fl">
+								<div class="control-btn">
+									<a href="javascript:;" class="sk_controls_prev sk_controls_item"><i class="iconfont"></i></a>
+									<a href="javascript:;" class="sk_controls_next sk_controls_item"><i class="iconfont"></i></a>
+								</div>
 								<ul class="clear">
 									<li class="sk-item">
 										<div>
 											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
-												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡</p>
+												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡1</p>
+											</a>
+											<span class="sk_item_shadow"></span>
+										</div>
+										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+									</li>
+									<li class="sk-item">
+										<div>
+											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡2</p>
+											</a>
+											<span class="sk_item_shadow"></span>
+										</div>
+										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+									</li>
+									<li class="sk-item">
+										<div>
+											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡3</p>
+											</a>
+											<span class="sk_item_shadow"></span>
+										</div>
+										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+									</li>
+									<li class="sk-item">
+										<div>
+											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡4</p>
+											</a>
+											<span class="sk_item_shadow"></span>
+										</div>
+										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+									</li>
+									<li class="sk-item">
+										<div>
+											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡5</p>
+											</a>
+											<span class="sk_item_shadow"></span>
+										</div>
+										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+									</li>
+									<li class="sk-item">
+										<div>
+											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡6</p>
 											</a>
 											<span class="sk_item_shadow"></span>
 										</div>
@@ -735,9 +783,8 @@
 					</div>
 				</div>
 			</div>
-			<!--楼梯2结束-->
 			<div id="mainlt">
-				<!--楼梯3开始-->
+				<!--楼梯内容开始-->
 				<div class="louti" style="background: #cc0033;">
 					享品质
 				</div>
@@ -766,13 +813,204 @@
 					还没逛够
 				</div>
 			</div>
-			<!--楼梯3结束-->
-
+			<!--楼层-页面底部-->
 			<div id="footer">
-				<!--楼梯4开始-->
-				网站底部
+				<div class="mod_service">
+					<div class="wrap">
+						<ul class="mod_service_list clear">
+							<li class="mod_service_item">
+								<div class="mod_service_unit">
+									<h5 class="mod_service_tit mod_service_duo">多</h5>
+									<p class="mod_service_txt">品类齐全，轻松购物</p>
+								</div>
+							</li>
+							<li class="mod_service_item">
+								<div class="mod_service_unit">
+									<h5 class="mod_service_tit mod_service_kuai">快</h5>
+									<p class="mod_service_txt">多仓直发，极速配送</p>
+								</div>
+							</li>
+							<li class="mod_service_item">
+								<div class="mod_service_unit">
+									<h5 class="mod_service_tit mod_service_hao">好</h5>
+									<p class="mod_service_txt">正品行货，精致服务</p>
+								</div>
+							</li>
+							<li class="mod_service_item">
+								<div class="mod_service_unit">
+									<h5 class="mod_service_tit mod_service_sheng">省</h5>
+									<p class="mod_service_txt">天天低价，畅选无忧</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="mod_help" clstag="h|keycount|2016|42">
+					<div class="wrap">
+						<div class="mod_help_list">
+							<div class="mod_help_nav">
+								<h5 class="mod_help_nav_tit">购物指南</h5>
+								<ul class="mod_help_nav_con">
+									<li>
+										<a href="//help.jd.com/user/issue/list-29.html" target="_blank">购物流程</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/list-151.html" target="_blank">会员介绍</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/list-297.html" target="_blank">生活旅行</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue.html" target="_blank">常见问题</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/list-136.html" target="_blank">大家电</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/index.html" target="_blank">联系客服</a>
+									</li>
+								</ul>
+							</div>
+							<div class="mod_help_nav">
+								<h5 class="mod_help_nav_tit">配送方式</h5>
+								<ul class="mod_help_nav_con">
+									<li>
+										<a href="//help.jd.com/user/issue/list-81-100.html" target="_blank">上门自提</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/list-81.html" target="_blank">211限时达</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/103-983.html" target="_blank">配送服务查询</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/109-188.html" target="_blank">配送费收取标准</a>
+									</li>
+									<li>
+										<a href="//en.jd.com/chinese.html" target="_blank">海外配送</a>
+									</li>
+								</ul>
+							</div>
+							<div class="mod_help_nav">
+								<h5 class="mod_help_nav_tit">支付方式</h5>
+								<ul class="mod_help_nav_con">
+									<li>
+										<a href="//help.jd.com/user/issue/list-172.html" target="_blank">货到付款</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/list-173.html" target="_blank">在线支付</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/list-176.html" target="_blank">分期付款</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/list-174.html" target="_blank">邮局汇款</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/list-175.html" target="_blank">公司转账</a>
+									</li>
+								</ul>
+							</div>
+							<div class="mod_help_nav">
+								<h5 class="mod_help_nav_tit">售后服务</h5>
+								<ul class="mod_help_nav_con">
+									<li>
+										<a href="//help.jd.com/user/issue/321-981.html" target="_blank">售后政策</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/list-132.html" target="_blank">价格保护</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/130-978.html" target="_blank">退款说明</a>
+									</li>
+									<li>
+										<a href="//myjd.jd.com/repair/repairs.action" target="_blank">返修/退换货</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/list-50.html" target="_blank">取消订单</a>
+									</li>
+								</ul>
+							</div>
+							<div class="mod_help_nav">
+								<h5 class="mod_help_nav_tit">特色服务</h5>
+								<ul class="mod_help_nav_con">
+									<li>
+										<a href="//help.jd.com/user/issue/list-133.html" target="_blank">夺宝岛</a>
+									</li>
+									<li>
+										<a href="//help.jd.com/user/issue/list-134.html" target="_blank">DIY装机</a>
+									</li>
+									<li>
+										<a href="//fuwu.jd.com/" target="_blank">延保服务</a>
+									</li>
+									<li>
+										<a href="//o.jd.com/market/index.action" target="_blank">京东E卡</a>
+									</li>
+									<li>
+										<a href="//mobile.jd.com/" target="_blank">京东通信</a>
+									</li>
+									<li>
+										<a href="//s.jd.com/" target="_blank">京东JD+</a>
+									</li>
+								</ul>
+							</div>
+							<div class="mod_help_cover">
+								<h5 class="mod_help_cover_tit">京东自营覆盖区县</h5>
+								<div class="mod_help_cover_con">
+									<p class="mod_help_cover_info">京东已向全国2661个区县提供自营配送服务，支持货到付款、POS机刷卡和售后上门服务。</p>
+									<p class="mod_help_cover_more">
+										<a href="//help.jd.com/user/issue/103-983.html" target="_blank">查看详情<i class="iconfont"></i></a>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="mod_copyright">
+					<div class="wrap mod_copyright_inner">
+						<p class="mod_copyright_links">
+							<a href="//about.jd.com" target="_blank">关于我们</a><span class="mod_copyright_split">|</span>
+							<a href="//about.jd.com/contact" target="_blank">联系我们</a><span class="mod_copyright_split">|</span>
+							<a href="//help.jd.com/user/custom.html" target="_blank">联系客服</a><span class="mod_copyright_split">|</span>
+							<a href="//vc.jd.com/cooperation.html" target="_blank">合作招商</a><span class="mod_copyright_split">|</span>
+							<a href="//helpcenter.jd.com/venderportal/index.html" target="_blank">商家帮助</a><span class="mod_copyright_split">|</span>
+							<a href="//jzt.jd.com" target="_blank">营销中心</a><span class="mod_copyright_split">|</span>
+							<a href="//app.jd.com/" target="_blank">手机京东</a><span class="mod_copyright_split">|</span>
+							<a href="//club.jd.com/links.aspx" target="_blank">友情链接</a><span class="mod_copyright_split">|</span>
+							<a href="//media.jd.com/" target="_blank">销售联盟</a><span class="mod_copyright_split">|</span>
+							<a href="//club.jd.com/" target="_blank">京东社区</a><span class="mod_copyright_split">|</span>
+							<a href="//sale.jd.com/act/FTrWPesiDhXt5M6.html" target="_blank">风险监测</a><span class="mod_copyright_split">|</span>
+							<a href="//about.jd.com/privacy/" target="_blank">隐私政策</a><span class="mod_copyright_split">|</span>
+							<a href="//gongyi.jd.com" target="_blank">京东公益</a><span class="mod_copyright_split">|</span>
+							<a href="//en.jd.com/" target="_blank">English Site</a><span class="mod_copyright_split">|</span>
+							<a href="//corporate.jd.com" target="_blank">Media &amp; IR</a>
+						</p>
+						<div class="mod_copyright_info">
+							<p>
+								<a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11000002000088" target="_blank">京公网安备 11000002000088号</a><span class="mod_copyright_split">|</span><span>京ICP证070359号</span><span class="mod_copyright_split">|</span>
+								<a href="//img14.360buyimg.com/da/jfs/t256/349/769670066/270505/3b03e0bb/53f16c24N7c04d9e9.jpg" target="_blank">互联网药品信息服务资格证编号(京)-经营性-2014-0008</a><span class="mod_copyright_split">|</span><span>新出发京零&nbsp;字第大120007号</span></p>
+							<p><span>互联网出版许可证编号新出网证(京)字150号</span><span class="mod_copyright_split">|</span>
+								<a href="//sale.jd.com/act/pQua7zovWdJfcIn.html" target="_blank">出版物经营许可证</a><span class="mod_copyright_split">|</span>
+								<a href="//misc.360buyimg.com/wz/wlwhjyxkz.jpg" target="_blank">网络文化经营许可证京网文[2014]2148-348号</a><span class="mod_copyright_split">|</span><span>违法和不良信息举报电话：4006561155</span></p>
+							<p><span>Copyright&nbsp;©&nbsp;2004&nbsp;-&nbsp;2017&nbsp;&nbsp;京东JD.com&nbsp;版权所有</span><span class="mod_copyright_split">|</span><span>消费者维权热线：4006067733</span>
+								<a href="//sale.jd.com/act/7Y0Rp81MwQqc.html" target="_blank" class="mod_copyright_license">经营证照</a>
+							</p>
+							<p><span>京东旗下网站：</span>
+								<a href="https://www.jdpay.com/" target="_blank">京东支付</a><span class="mod_copyright_split">|</span>
+								<a href="http://www.jcloud.com " target="_blank">京东云</a>
+							</p>
+						</div>
+						<p class="mod_copyright_auth">
+							<a class="mod_copyright_auth_ico mod_copyright_auth_ico_1" href="http://www.hd315.gov.cn/beian/view.asp?bianhao=010202007080200026" target="_blank">经营性网站备案中心</a>
+							<a class="mod_copyright_auth_ico mod_copyright_auth_ico_2" href="https://ss.knet.cn/verifyseal.dll?sn=2008070300100000031&amp;ct=df&amp;pa=294005" target="_blank">可信网站信用评估</a>
+							<a class="mod_copyright_auth_ico mod_copyright_auth_ico_3" href="http://www.cyberpolice.cn/" target="_blank">网络警察提醒你</a>
+							<a class="mod_copyright_auth_ico mod_copyright_auth_ico_4" href="https://search.szfw.org/cert/l/CX20120111001803001836" target="_blank">诚信网站</a>
+							<a class="mod_copyright_auth_ico mod_copyright_auth_ico_5" href="http://www.12377.cn" target="_blank">中国互联网举报中心</a>
+							<a class="mod_copyright_auth_ico mod_copyright_auth_ico_6" href="http://www.12377.cn/node_548446.htm" target="_blank">网络举报APP下载</a>
+						</p>
+					</div>
+				</div>
 			</div>
-			<!--楼梯4结束-->
 		</div>
 	</body>
 	<script src="js/jquery-1.11.3.js" type="text/javascript"></script>
