Signed-off-by: xuxu713 <190159372@qq.com>

--- a/details.html
+++ b/details.html
@@ -343,9 +343,8 @@
 									<div id="bf">
 										<img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt=" " id="bpic">
 									</div>
-									<div class="spec-list" id="ulist">
+									<div class="spec-list clear" id="ulist">
 										<a href="javascript:;" id="left" class="spec-control"></a>
-										<a href="javascript:;" id="right" class="spec-control"></a>
 										<div class="spec-items" id="list">
 											<ul class="clear">
 												<li><img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
@@ -356,6 +355,7 @@
 												<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
 											</ul>
 										</div>
+										<a href="javascript:;" id="right" class="spec-control"></a>
 									</div>
 								</div>
 								<div class="short-share clear ">
