--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
 									<a href="javascript:;" class="sk_controls_prev sk_controls_item"><i class="iconfont"></i></a>
 									<a href="javascript:;" class="sk_controls_next sk_controls_item"><i class="iconfont"></i></a>
 								</div>
-								<ul class="clear">
+								<ul class="clear sk-item-ul">
 									<li class="sk-item">
 										<div>
 											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
@@ -715,7 +715,7 @@
 										</div>
 										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
 									</li>
-									<li class="sk-item">
+									<!--<li class="sk-item">
 										<div>
 											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
 												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡2</p>
@@ -759,7 +759,7 @@
 											<span class="sk_item_shadow"></span>
 										</div>
 										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
-									</li>
+									</li>-->
 								</ul>
 							</div>
 							<!--秒杀模块的轮播图广告-->
