--- a/login.html
+++ b/login.html
@@ -78,16 +78,17 @@
 								</div>
 							</div>
 							<div class="username-login">
+								<div class="msg-error" id="error"><b></b>账户名或密码错误</div>
 								<!--账户登录的主内容盒子-->
-								<form>
+								<form method="post" onsubmit="return false">
 									<div class="item item-fore1">
 										<label for="loginname"></label>
-										<input id="loginname" type="text" class="itxt" name="loginname" autocomplete="off" value="" placeholder="邮箱/用户名/已验证手机">
+										<input id="username" type="text" class="itxt" name="username" autocomplete="off" value="" placeholder="邮箱/用户名/已验证手机">
 										<span class="clear-btn"></span>
 									</div>
 									<div id="entry" class="item item-fore2">
-										<label for="nloginpwd"></label>
-										<input type="password" id="nloginpwd" name="nloginpwd" class="itxt itxt-error" autocomplete="off" placeholder="密码">
+										<label for="password"></label>
+										<input type="password" id="password" name="password" class="itxt itxt-error" autocomplete="off" placeholder="密码">
 										<span class="clear-btn"></span>
 										<!--<span class="capslock"><b></b>大小写锁定已打开</span>-->
 									</div>
@@ -96,23 +97,24 @@
 									</div>
 									<div class="item item-fore4">
 										<div>
-											<a href="javascript:;" class="btn-img" id="loginsubmit">登　录</a>
+											<!--<a href="javascript:;" class="btn-img" id="loginsubmit">登　录</a>-->
+											<input type="button" name="submit" value=" 登录  " class="btn-img" id="loginsubmit"/>
 										</div>
 									</div>
 								</form>
 							</div>
-							<div class="main-foot">
-								<ul class="clear">
-									<li class="fl">
-										<a href="javascript:;" class="pdl"><b class="micon QQ-icon"></b><span>QQ</span></a>
-										<span class="line">|</span>
+							<div class=" main-foot ">
+								<ul class="clear ">
+									<li class="fl ">
+										<a href="javascript:; " class="pdl "><b class="micon QQ-icon "></b><span>QQ</span></a>
+										<span class="line ">|</span>
 									</li>
-									<li class="fl">
-										<a href="javascript:;"><b class="micon weixin-icon"></b><span>微信</span></a>
+									<li class="fl ">
+										<a href="javascript:; "><b class="micon weixin-icon "></b><span>微信</span></a>
 									</li>
-									<li class="fr">
-										<div class="regist-link">
-											<a href="register.html" target="_blank"><b></b>立即注册</a>
+									<li class="fr ">
+										<div class="regist-link ">
+											<a href="register.html " target="_blank "><b></b>立即注册</a>
 										</div>
 									</li>
 								</ul>
@@ -121,30 +123,30 @@
 					</div>
 				</div>
 			</div>
-			<div class="footer">
-				<div class="wrap">
-					<div class="links">
-						<a target="_blank" href="//www.jd.com/intro/about.aspx"> 关于我们</a>|
-						<a target="_blank" href="//www.jd.com/contact/">联系我们</a>|
-						<a target="_blank" href="//zhaopin.jd.com/">人才招聘</a>|
-						<a target="_blank" href="//www.jd.com/contact/joinin.aspx">商家入驻</a>|
-						<a target="_blank" href="//www.jd.com/intro/service.aspx">广告服务</a>|
-						<a target="_blank" href="//app.jd.com/">手机京东</a>|
-						<a target="_blank" href="//club.jd.com/links.aspx">友情链接</a>|
-						<a target="_blank" href="//media.jd.com">销售联盟</a>|
-						<a href="//club.jd.com/" target="_blank">京东社区</a>|
-						<a href="//gongyi.jd.com" target="_blank">京东公益</a>|
-						<a target="_blank" href="//en.jd.com/" clstag="pageclick|keycount|20150112ABD|9">English Site</a>
+			<div class="footer ">
+				<div class="wrap ">
+					<div class="links ">
+						<a target="_blank " href="//www.jd.com/intro/about.aspx "> 关于我们</a>|
+						<a target="_blank " href="//www.jd.com/contact/ ">联系我们</a>|
+						<a target="_blank " href="//zhaopin.jd.com/ ">人才招聘</a>|
+						<a target="_blank " href="//www.jd.com/contact/joinin.aspx ">商家入驻</a>|
+						<a target="_blank " href="//www.jd.com/intro/service.aspx ">广告服务</a>|
+						<a target="_blank " href="//app.jd.com/ ">手机京东</a>|
+						<a target="_blank " href="//club.jd.com/links.aspx ">友情链接</a>|
+						<a target="_blank " href="//media.jd.com ">销售联盟</a>|
+						<a href="//club.jd.com/ " target="_blank ">京东社区</a>|
+						<a href="//gongyi.jd.com " target="_blank ">京东公益</a>|
+						<a target="_blank " href="//en.jd.com/ " clstag="pageclick|keycount|20150112ABD|9 ">English Site</a>
 					</div>
-					<div class="copyright">
+					<div class="copyright ">
 						Copyright©2004-2016&nbsp;&nbsp;京东JD.com&nbsp;版权所有
 					</div>
 				</div>
 			</div>
 		</div>
 	</body>
-	<script src="js/jquery-1.11.3.js" type="text/javascript"></script>
-	<script src="js/index.js" type="text/javascript"></script>
-	<script src="js/login.js" type="text/javascript"></script>
+	<script src="js/jquery-1.11.3.js " type="text/javascript "></script>
+	<script src="js/index.js " type="text/javascript "></script>
+	<script src="js/login.js " type="text/javascript "></script>
 
 </html>
